# open-client

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  cosign.pub  rust-toolchain.toml
.github/workflows/: ci.yml  release-android.yml  release-linux.yml  release-macos.yml  release-windows.yml
crates/agent-core/: Cargo.toml
crates/agent-core/examples/: mk_grant.rs  ssh_connect.rs  ssh_serve.rs
crates/agent-core/src/: adapters.rs  application.rs  dataplane.rs  disco.rs  dns.rs  domain.rs  lib.rs  machine_key.rs  oidc.rs  ports.rs  pump.rs  pump_wintun.rs  relay_transport.rs  ssh_client.rs  ssh_grant.rs  ssh_server.rs  status.rs  stun.rs  tundev.rs  tunnel.rs
crates/agent-daemon/: Cargo.toml
crates/agent-daemon/src/: agent_identity.rs  agent_token.rs  ci_deploy.rs  ci_policy.rs  main.rs  netstack.rs  resolve.rs  resolver.rs  ssh.rs  ssh_exec.rs  tls_relay.rs  tun.rs  up.rs
crates/agent-ios-ptp/: Cargo.toml
crates/agent-ios-ptp/include/: agent_ios_ptp.h
crates/agent-ios-ptp/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: cert.rs  lib.rs
crates/domain-core/: Cargo.toml
crates/domain-core/src/: lib.rs
crates/ledger-client/: Cargo.toml
crates/ledger-client/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/relay-core/: Cargo.toml
crates/relay-core/src/: frame.rs  lib.rs  limit.rs
docs/: CNAME  android-distribution-setup.md  arsenal.md  auth-deeplink-signin-spec.md  brand-icon.md  concept-trace.md  daemon-state-dir.md  f3-ios-dns-forwarding-resolver.md  feature-03b-gui-spec.md  honest-limits.html  hotfix-macos-dataplane-gaps.md  index.html  install-linux.html  invariant-trace.md  ios-appstore-release-prep.md  ios-build-verify-checklist.md  phase-completion-checklist-1.1.md  plan-v1.0.md  privacy.html  qc-discipline.md  style.css  terms.html  windows-signing-setup.md
docs/user-guide/: README.md  access.md  deploy-rules.md  devices.md  members.md  services.md  ssh.md  subdomains.md
frontend/: README.md
frontend/app-gui/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/app-gui/src/: app.html
frontend/app-gui/src/lib/: PolicyForm.svelte  StepUpModal.svelte  i18n.ts  qr.ts  stepup.ts  stores.ts  tauri.ts  theme.ts  types.ts  webauthn.ts
frontend/app-gui/src/lib/components/: BottomTabBar.svelte  ConnectionCard.svelte  DiagnosticsDialog.svelte  LedgerReceipts.svelte  PathChain.svelte  PreflightGate.svelte  SshReceipts.svelte
frontend/app-gui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/app-gui/src/routes/access/: +page.svelte
frontend/app-gui/src/routes/add-device/: +page.svelte
frontend/app-gui/src/routes/admin/: +page.svelte
frontend/app-gui/src/routes/connect/: +page.svelte
frontend/app-gui/src/routes/connected/: +page.svelte
frontend/app-gui/src/routes/dashboard/: +page.svelte
frontend/app-gui/src/routes/devices/: +page.svelte
frontend/app-gui/src/routes/members/: +page.svelte
frontend/app-gui/src/routes/policies/: +page.svelte
frontend/app-gui/src/routes/policies/[...repo]/: +page.svelte
frontend/app-gui/src/routes/policies/new/: +page.svelte
frontend/app-gui/src/routes/services/: +page.svelte
frontend/app-gui/src/routes/settings/: +layout.svelte  +page.svelte
frontend/app-gui/src/routes/settings/account/: +page.svelte
frontend/app-gui/src/routes/settings/devices/: +page.svelte
frontend/app-gui/src/routes/settings/security/: +page.svelte
frontend/app-gui/src/routes/subdomains/: +page.svelte
frontend/app-gui/src/routes/terminal/: +page.svelte
frontend/app-gui/src/routes/upgrade/: +page.svelte
frontend/app-gui/src/routes/upgrade/cancel/: +page.svelte
frontend/app-gui/src/routes/upgrade/success/: +page.svelte
frontend/app-gui/src/routes/welcome/: +page.svelte
gui/: README.md
gui/src-tauri/: .gitkeep  Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
gui/src-tauri/capabilities/: mobile.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/icons/android/values/: ic_launcher_background.xml
gui/src-tauri/ios/: PacketTunnel.target.yml
gui/src-tauri/ios/AppSupport/: OpenUrlBridge.swift  PrivacyInfo.xcprivacy  TunnelManager.swift  VpnBridge.swift
gui/src-tauri/ios/PacketTunnel/: PacketTunnel-Bridging-Header.h  PacketTunnelProvider.swift  PrivacyInfo.xcprivacy
gui/src-tauri/macos/: com.ankayma.helper.plist
gui/src-tauri/macos/PrivilegedHelper/: Cargo.toml
gui/src-tauri/macos/PrivilegedHelper/src/: main.rs
gui/src-tauri/src/: lib.rs  preflight.rs  vpn.rs  vpn_android.rs
gui/src-tauri/windows/WindowsService/: Cargo.toml
gui/src-tauri/windows/WindowsService/src/: main.rs
gui/src-tauri/wix/: service-fragment.wxs
packaging/: ankayma-agent.service  nfpm.yaml  postinstall.sh  preremove.sh
packaging/windows/: build-ankayma-windows.bat  service-install.bat  service-uninstall.bat
scripts/: install.sh  ios-postinit.sh  nginx-get.ankayma.com.conf  release-ios.sh  release-linux.sh  release-macos.sh
