[workspace]
resolver = "2"
members = [
    "crates/domain-core",
    "crates/proto",
    "crates/crypto",
    "crates/ledger-client",
    "crates/agent-core",
    "crates/agent-daemon",
    "crates/cli",
    "gui/src-tauri",  # [T:Part D §D.3] Tauri 2 GUI shell — initialized milestone 1.1
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"   # [T per Part D §D.7] — owner-chosen 2026-06-17, open-code spirit

[workspace.dependencies]
domain-core   = { path = "crates/domain-core" }
proto         = { path = "crates/proto" }
crypto        = { path = "crates/crypto" }
ledger-client = { path = "crates/ledger-client" }
agent-core    = { path = "crates/agent-core" }
