[workspace]
resolver = "2"
members = [
    "crates/domain-core",
    "crates/proto",
    "crates/crypto",
    "crates/ledger-client",
    "crates/agent-core",
    "crates/agent-daemon",
    "crates/agent-ios-ptp",  # [T:A.1.9] iOS Packet Tunnel FFI staticlib (extension links it)
    "crates/cli",
    "gui/src-tauri",  # [T:Part D §D.3] Tauri 2 GUI shell — initialized milestone 1.1
    "gui/src-tauri/macos/PrivilegedHelper",  # [A per docs/hotfix-macos-dataplane-gaps.md Gap 1] root LaunchDaemon; macOS-only body, no-op stub elsewhere so Linux CI still builds it
]

[workspace.package]
version = "1.1.2"
edition = "2021"
rust-version = "1.75"
license = "LicenseRef-Elastic-2.0"   # [T per Part D §D.7] — Apache-2.0 chosen 2026-06-17, switched to ELv2 2026-07-10; see LICENSE

[workspace.dependencies]
domain-core   = { path = "crates/domain-core" }
proto         = { path = "crates/proto" }
crypto        = { path = "crates/crypto" }
ledger-client = { path = "crates/ledger-client" }
agent-core    = { path = "crates/agent-core" }
