[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
domain-core = { workspace = true }
proto       = { workspace = true }
crypto      = { workspace = true }
# [T:A.1.21] HTTP client for the control-plane Agent API (B.5.1). rustls-tls (no
# OpenSSL), matching control-plane. serde for the wire types. Deps owner-reviewable.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde   = { version = "1", features = ["derive"] }
# [T:A.1.21] WireGuard data-plane engine (owner-chosen stack). boringtun is
# Cloudflare's pure-Rust userspace WireGuard — runs on all 5 platforms (A.1.9).
boringtun = "0.7"

[dev-dependencies]
serde_json = "1"
tokio      = { version = "1", features = ["rt", "macros"] }
rand_core  = { version = "0.6.4", features = ["getrandom"] }
