[package]
name = "agent-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

# Gate A.1.4 NC variant. Same source — escrow path is `#[cfg(feature = "key-escrow-build")]`
# in src/main.rs. `required-features` makes Cargo emit this binary ONLY when the feature
# is enabled, so default `cargo build -p agent-daemon` produces just `agent`. Build NC:
#   cargo build -p agent-daemon --bin agent-nc-escrow --features key-escrow-build
[[bin]]
name = "agent-nc-escrow"
path = "src/main.rs"
required-features = ["key-escrow-build"]

[dependencies]
agent-core = { workspace = true }
async-nats = "0.40"
chacha20poly1305 = "0.10"
rand = "0.8"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "io-std", "io-util"] }
anyhow = "1"
# [T:A.1.21] data-plane deps (owner-reviewable, pinned). serde_json: agent state
# file (persisted node identity, so re-runs don't leak a new control-plane node).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# [T:A.1.21] userspace TCP/IP stack for the SaaS-runner deploy path (B-3, R3 #12):
# moves real deploy traffic over the WireGuard tunnel WITHOUT a kernel TUN device,
# so `agent ci-deploy` runs in an unprivileged hosted CI container. Pinned, pure-Rust,
# no_std-capable, owner-reviewable. `[T:smoltcp@0.12]`
smoltcp = { version = "0.12", default-features = false, features = ["std", "alloc", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp"] }

# [T:F-3 auto-TLS, A.1.1] this node's own TLS keypair + CSR (PKCS#10) for its
# branded subdomain — the private key is generated and stays HERE; only the CSR
# (public) ever goes to the control plane. `[T:rcgen@0.14]`
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "ring"] }
# TLS termination for the local relay — no HTTP parsing, just a raw byte relay
# after handshake, so no hyper/axum needed. `[T:tokio-rustls@0.26]`
tokio-rustls = "0.26"
# PEM→DER for the issued cert chain — already used elsewhere in this workspace
# (crypto crate); hand-rolling the base64 codec itself isn't worth it. `[T:base64@0.22]`
base64 = "0.22"

# [T:A.1.21] utun device on macOS uses raw PF_SYSTEM/UTUN_CONTROL syscalls via
# libc — no third-party TUN crate, keeps the dependency surface minimal/auditable.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# [T:A.1.21] Linux tun device (/dev/net/tun + TUNSETIFF) via libc — the deploy
# *target* (a Linux server) brings the overlay up here. Same minimal-deps rationale.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# [T:§H.6, gate A.0-a] Windows L3 data plane via the official signed Wintun driver
# (loaded from wintun.dll at runtime). Adapter create/session lives in tun.rs::imp.
[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
# Console VT + raw-mode for the `agent ssh` client: without ENABLE_VIRTUAL_TERMINAL_
# PROCESSING the remote PTY's ANSI escapes print literally (^[[01;32m…) and input
# stays line-buffered. Mirrors the unix termios RawMode. [T:console VT]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }

[features]
default = []
# Gate A.1.4 NC: client escrows session key onto NATS data subject as a separate
# message. Default build NEVER does this. CI under `GATE_NC=key_escrow_build`
# stays red unless this feature compiled in (NC giả pattern).
key-escrow-build = []
