[package]
name = "ankayma-gui"
version = "0.1.0"
description = "Ankayma GUI shell (Tauri 2)"
authors = []
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `tray-icon` enables the macOS menu-bar tray (Part D §D.3, desktop only — gated
# #[cfg(desktop)] so mobile is unaffected). The status dot is drawn from raw RGBA
# (tauri::image::Image), so no image-format feature is needed. [T:A.1.21] pinned.
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
# Deep-link sign-in: the browser "Open Ankayma" button opens `ankayma://auth?token=…`
# straight into the app instead of copy/paste. single-instance focuses the running
# app (and forwards the URL on Windows/Linux) instead of launching a 2nd copy.
# See docs/auth-deeplink-signin-spec.md.
tauri-plugin-deep-link = "2"
# Parse the `ankayma://auth?token=…` deep-link URL. Same 2.x as the deep-link
# plugin's re-export (cargo unifies), so the types line up.
url = "2"
# Control-plane calls go through agent-core (A.1.1). `open` launches the system
# browser for the GitHub OAuth start. [T:A.1.21]
agent-core = { workspace = true }
open = "5"

# single-instance is desktop-only (the crate has no mobile target).
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
