[package]
name = "ankayma-gui"
version = "1.1.0"
description = "Ankayma GUI shell (Tauri 2)"
authors = []
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `tray-icon` enables the macOS menu-bar tray (Part D §D.3, desktop only — gated
# #[cfg(desktop)] so mobile is unaffected). The status dot is drawn from raw RGBA
# (tauri::image::Image), so no image-format feature is needed. [T:A.1.21] pinned.
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
# Deep-link sign-in: the browser "Open Ankayma" button opens `ankayma://auth?token=…`
# straight into the app instead of copy/paste. single-instance focuses the running
# app (and forwards the URL on Windows/Linux) instead of launching a 2nd copy.
# See docs/auth-deeplink-signin-spec.md.
tauri-plugin-deep-link = "2"
# Parse the `ankayma://auth?token=…` deep-link URL. Same 2.x as the deep-link
# plugin's re-export (cargo unifies), so the types line up.
url = "2"
# Control-plane calls go through agent-core (A.1.1). `open` launches the system
# browser for the GitHub OAuth start on DESKTOP. On iOS the `open` crate no-ops
# (no `open`/`xdg-open` binary) so we bridge to Swift `UIApplication.open` via the
# C-ABI in ios/AppSupport/OpenUrlBridge.swift instead (see src/vpn.rs). [T:A.1.21]
agent-core = { workspace = true }
open = "5"
# [T:A.1.21] base64 for streaming SSH terminal bytes to xterm.js as JSON-safe
# strings (F-2 §H.2.2). Already in-tree via agent-core; declared for direct use.
base64 = "0.22"
# gethostname(2) for device_hostname(); already a transitive dep via agent-core
# but must be declared directly for use in this crate. [T:A.1.21]
libc = "0.2"
# [T:A.1.21] first-party Tauri plugin — in-app QR scan for the node-invite flow
# (welcome "Scan QR"). Mobile-only at runtime (native camera scanner); registered
# under #[cfg(mobile)] in lib.rs. Pinned.
tauri-plugin-barcode-scanner = "2.4.5"

# single-instance + updater are desktop-only (neither crate has a mobile
# target). Auto-update ships for macOS first (Part D release pipeline §3.3);
# Linux distributes via apt/yum instead (§4), so the endpoint/pubkey config in
# tauri.conf.json is inert there for now. Restart-after-update uses
# AppHandle::restart(), inherent to tauri core (2.11+) — no
# tauri-plugin-process needed [T — verified via docs.rs, that crate only
# exports `init()`, no ProcessExt].
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = "0.1.3"

# iOS-only: send one Objective-C message to the WKWebView's scroll view so it
# stops double-applying the home-indicator safe area (see run() setup). objc2 is
# already in the tree transitively (via wry/tao); we pin the same 0.6 line and
# promote it to a direct dep rather than pull a third-party inset plugin. [A.1.21]
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"

# Android-only: JNI bridge to AnkaymaVpnService (VpnService owns the TUN fd + calls
# nativeStart/Stop; Rust calls protect/bindSocket/forwardDns back). socket2 lets the
# control-plane loopback proxy create-then-bind-then-connect (std TcpStream connects
# on creation, too late to bind the fd to the non-VPN network). [A.1.21]
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
socket2 = "0.6"
