[package]
name = "ankayma-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "LicenseRef-Elastic-2.0"
description = "Root LaunchDaemon that starts/stops the Ankayma agent daemon on behalf of the sandboxed GUI (A.1.7 gap 1 — replaces per-connect osascript admin prompts)."

[[bin]]
name = "ankayma-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
