[package]
name = "ankayma-windows-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "Apache-2.0"
description = "Windows Service (LocalSystem) that starts/stops the Ankayma agent daemon — named-pipe IPC, analogous to the macOS PrivilegedHelper LaunchDaemon."

[[bin]]
name = "ankayma-service"
path = "src/main.rs"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows-only runtime deps. `windows-service` drives the SCM registration and
# the service-dispatcher entry point. `windows-sys` gives raw Win32 APIs for the
# named-pipe server and process management. [A verified-on-windows]
[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security",
] }
